--- a/source/styles/adjusment.scss
+++ b/source/styles/adjusment.scss
@@ -1,16 +1,16 @@
 @import './mixins.scss';
 
 .wrapper{
-    min-width: 320px;
+    min-width: rem(320px);
     width:100%;
     display: flex;
     flex-direction: column;
-    min-height: 628px;
+    min-height: rem(628px);
     height: 100%;
 
    @include desctop{
   
-    min-width: 1279px;
+    min-width: rem(1279px);
 }
 }
 
@@ -18,6 +18,10 @@
     display: flex;
     flex: 0 0 auto;
     border-bottom: 1px solid  #F0F0F0;
+
+    @include phones{
+        border-bottom: none;
+    }
 }
 
 .content{
@@ -31,22 +35,36 @@
 }
 
 .container {
-    max-width: 1280px;
+    max-width: rem(1280px);
     width: 100%;
     position: relative;
     display: flex;
     justify-content: center;
-    margin: 0 40px;
+    margin: 0 rem(40px);
+
+    @include phones{
+        margin: 0;
+        padding: 0 rem(20px);
+    }
 }
 
 .header__container{
     justify-content: flex-start;
-    padding: 32px 0;
+    padding: rem(32px) 0;
+
+    @include phones{
+        justify-content: space-between;
+        padding: rem(32px) rem(20px);
+    }
 }
 
 .footer__container{
     justify-content: space-between;
     padding: 25px 0;
     flex-wrap: wrap;
+    @include phones{
+        justify-content: center;
+        padding: rem(25px) rem(20px);
+    }
 }
 
