--- a/source/styles/mixins.scss
+++ b/source/styles/mixins.scss
@@ -13,7 +13,7 @@
 }
 
 @mixin phones {
-  @media screen and (min-width: $phones) {
+@media screen and (min-width:$phones) and (max-width:$tablets)  {
     @content;
   }
 }
