--- a/source/pages/main/main.scss
+++ b/source/pages/main/main.scss
@@ -38,10 +38,22 @@
     margin-left: rem(28px);
 }
 
+.header-nav-hamburger_active {
+    position: absolute;
+    display: flex;
+    top: 50px;
+    width: 100%;
+    justify-content: center;
+}
+
 /* content  */
 .main-content{
     flex-direction: column;
     margin: rem(29px) 0 rem(13px) 0;
+
+    @include phones{
+        margin: rem(100px) 0 rem(13px) 0;
+    }
 }
 
 .content__container{
@@ -54,11 +66,6 @@
     }
 }
 
-.favorite-devices{
-    height: 25%;
-    width: 100%;
-    padding-left: rem(40px);
-}
 .main{
     height: 100%;
     width: 50%;
@@ -70,6 +77,7 @@
     @include phones{
         width: 100%;
         margin-right: 0;
+        margin-bottom: rem(31px);
     }
 }
 
@@ -106,6 +114,10 @@
     font-size: rem(27px);
     color: #333333;
     font-weight: 700;
+
+    @include phones{
+        font-size: rem(18px);
+    }
 }
 
 .temperature-home{
@@ -164,6 +176,7 @@ color: #858585;
 
     @include phones{
         width: 100%;
+        margin-left:0;
     }
 }
 
@@ -354,12 +367,12 @@ letter-spacing: 0;
     }
 }
 
-.gallery2__prev {
+.gallery-horizontal__prev {
     top: rem(-39px);
     right: rem(56px);
 }
 
-.gallery2__next {
+.gallery-horizontal__next {
     top: rem(-39px);
     right: rem(23px);
     transform: rotate(-180deg);
@@ -367,43 +380,63 @@ letter-spacing: 0;
 /* ---- end -----*/
 
 /* ---- favorite-scenarios ---- */
-.gallery1__nav{
-    display: flex;
-    flex-wrap: wrap;
+.gallery-multi{
+    @include phones{
+        width: 100%;
+        overflow: hidden;
+    }
+  
 }
 
-.gallery1__prev{
+.gallery-multi__nav{
+    display: flex;
+    flex-wrap: wrap;
+
+    @include phones{
+        flex-direction: row;
+    height: 100%;
+    width: 624.938rem;
+    transition: margin-left 250ms;
+    }
+}
+
+.gallery-multi__prev{
     top:rem(7px);
     right: rem(28px);
 }
 
-.gallery1__next {
+.gallery-multi__next {
     top: rem(7px);
     transform: rotate(-180deg);
     right: rem(-5px);
 }
 
-.gallery1__img{
+.gallery-multi__img{
     width: rem(14px);
     height: rem(14px);
   }
 
-  .gallery1__item {
+  .gallery-multi__item {
     width: 32%;
     height: 32%;
     margin-bottom: rem(13px);
+
+    @include phones{
+        width: auto; 
+         height: auto;
+    }
 }
 
 
-.gallery1__item + .gallery1__item{
+.gallery-multi__item + .gallery-multi__item{
     margin-right: rem(12px);
 }
 
-.gallery1__item:nth-child(3n){
+.gallery-multi__item:nth-child(3n){
     margin-right: 0;
 }
 
-.gallery1__item:first-child{
+.gallery-multi__item:first-child{
     margin-right: rem(12px);
 }
 
@@ -411,17 +444,43 @@ letter-spacing: 0;
     height: rem(100px);
 }
 
-.carousel1{
+.carousel-multi{
     margin-top: rem(20px);
+
+    @include phones{
+        width: 100%;
+    }
 }
 /* ---- end favorite-scenarios ---- */
 
 
 /* ---- favorite-devices ---- */
 
+.favorite-devices{
+    height: 25%;
+    width: 100%;
+    padding-left: rem(40px);
+    
+    @include phones{
+        padding-left: 0;
+    }
+}
+
+.carousel_paddingLeft{
+    @include phones{
+        padding-left: rem(20px);
+    }
+    
+}
+
+
 .favorite-devices__title{
     display: flex;
     margin-bottom: rem(25px);
+
+    @include phones{
+        justify-content: space-between;
+    }
 }
 
 .favorite-devices__items{
@@ -434,8 +493,40 @@ letter-spacing: 0;
     }
 }
 
+.menu-dropdown{
+    display: none;
+    @include phones{
+        display: flex;
+        position: relative;
+    }
+
+    &__btn{
+        position: absolute;
+        width: 8px;
+        height: 10px;
+        -webkit-transform: rotate(-90deg);
+        transform: rotate(-90deg);
+        top: 8px;
+        left: 36px;
+        z-index: 99;
+    }
+
+    &__title{
+        position: relative;
+    }
+}
+
+
+.favorite-devices__items_dropdown{
+    display: none;
+}
+
+
 .favorite-devices__item+ .favorite-devices__item{
     margin-left: rem(15px);
+    @include phones{
+        margin-left: 0;
+    }
 }
 
 .favorite-devices__link{
@@ -446,6 +537,37 @@ letter-spacing: 0;
     background-color: #FFD93E;
     border-radius: 20px;
     padding: rem(8px) rem(13px);
+    position: relative;
+
+    @include phones{
+        border-radius: 0;
+        display: block;
+    }
+
+    &:hover{
+        cursor: pointer;
+        background-color:#FFD700;
+    }
+    
+    &_paddingRight{
+        @include phones{
+            padding-right: 28px;
+            border-radius: 20px;
+        }
+    }
+}
+
+.menu-dropdown-arrow{
+    position: relative;
+}
+
+.menu-dropdown__items{
+    position: absolute;
+    z-index: 9999;
+    top: 28px;
+    left: -8px;
+    flex-direction: column;
+    display: none;
 }
 
 /* ---- end favorite-devices ---- */
@@ -478,73 +600,9 @@ text-align: left;
     color: #333333;
 }
 
-
-/* ---menuToggle--- */
 .hamburger-menu{
     display: none;
-    
-    @include phones {
+    @include phones{
         display: flex;
-        width: rem(20px);
-    height: rem(20px);
-    position: relative;
     }
 }
-  #menuToggle {
-    overflow: hidden;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-   
-  }
-  
-  #menuToggle input {
-    display: flex;
-    width: rem(16px);
-    height: rem(16px);
-    position: absolute;
-    cursor: pointer;
-    opacity: 0; /* hide input */
-    z-index: 1; /* top of the menu */
-  }
-  
-  #menuToggle span{
-    width: rem(16px);
-    height: rem(2px);
-    margin-bottom: rem(3px);
-    background: #7f8fa6;
-    border-radius: 4px;
-    -webkit-transition: all .5s cubic-bezier(.08,.81,.87,.71);
-    -moz-transition: all .5s cubic-bezier(.08,.81,.87,.71);
-    -ms-transition: all .5s cubic-bezier(.08,.81,.87,.71);
-    -o-transition: all .5s cubic-bezier(.08,.81,.87,.71);
-    transition: all .5s cubic-bezier(.08,.81,.87,.71);
-  }
-  
-  #span1 {
-    transform-origin: 4px 0px;
-  }
-  
-  #span3 {
-    transform-origin: bottom right;
-  }
-  
-  #menuToggle input:checked ~ #span1 {
-    background-color: #0c2461;
-    transform: rotate(45deg) translate(4px);
-  }
-  #menuToggle input:checked ~ #span2 {
-    background-color: #0c2461;
-    transform: rotate(495deg);   
-  }
-  #menuToggle input:checked ~ #span3 {
-    background-color: #0c2461;
-    transform: rotate(45deg);
-    opacity: 0;
-  }
-/* ---menuToggle--- */
