--- a/source/styles/adjusment.scss
+++ b/source/styles/adjusment.scss
@@ -7,7 +7,7 @@
     flex-direction: column;
     min-height: rem(628px);
     height: 100%;
-
+    position: relative;
    @include desctop{
   
     min-width: rem(1279px);
@@ -18,9 +18,15 @@
     display: flex;
     flex: 0 0 auto;
     border-bottom: 1px solid  #F0F0F0;
+    position: relative;
 
     @include phones{
         border-bottom: none;
+        top: 0;
+        position: fixed;
+        z-index: 99;
+        width: 100%;
+        background-color: white;
     }
 }
 
@@ -44,7 +50,18 @@
 
     @include phones{
         margin: 0;
-        padding: 0 rem(20px);
+    }
+}
+
+.container_padding{
+    @include phones{
+    padding: 0 rem(20px);
+    }
+}
+.container_paddingLeft{
+    
+    @include phones{
+        padding: 0 0 0 rem(20px);
     }
 }
 
@@ -54,6 +71,7 @@
 
     @include phones{
         justify-content: space-between;
+        align-items: center;
         padding: rem(32px) rem(20px);
     }
 }
