--- a/source/pages/main/main.scss
+++ b/source/pages/main/main.scss
@@ -221,9 +221,8 @@ letter-spacing: 0;
     display: flex;
     width: 100%;
     flex-wrap: wrap;
-    padding-right: rem(5px);
     align-items: flex-end;
-    word-break: break-all;
+    height: rem(40px);
 }
 
 .scenario__sheduling{
