заменила scenario на card

--- a/source/pages/main/main.scss
+++ b/source/pages/main/main.scss
@@ -183,9 +183,9 @@
 
 /*---end content ---- */
 
-/* scenario */
+/* card */
 
-.scenario {
+.card {
     width: rem(200px);
     height: rem(120px);
     padding: rem(14px);
@@ -231,7 +231,7 @@
     }
 }
 
-/* --- end scenario --- */
+/* --- end card --- */
 
 /* vertical carousel*/
 
