--- a/source/pages/main/main.scss
+++ b/source/pages/main/main.scss
@@ -207,7 +207,12 @@
 
     &__img{
         width: rem(24px);
-        height: rem(24px);
+            height: rem(24px);
+        display: none;
+
+        &_active{
+            display: block;
+        }
     }
     &__title {
         font-family: 'Arial-BoldMT', Arial, Helvetica, sans-serif;
@@ -258,7 +263,7 @@
     width: 34%;
 }
 
-.arrow {
+.btn {
     position: absolute;
     padding: 0;
     display: flex;
@@ -267,19 +272,31 @@
     }
 }
 
-.arrow__img {
+.arrow{
+    fill:rgba(152, 154, 156,.8);
+
+    &:hover{
+        fill:rgba(152, 154, 156,1);
+    }
+    &:active{
+        fill:rgba(51, 51, 51,1);
+    }
+}
+
+.arrow-icon-prev{
+    width: 100%;
+    height: 100%;;
+}
+
+.btn__img {
     width: rem(16px);
     height: rem(16px);
     margin: rem(13px) 0;
-}
+   
 
-.arrow:focus {
-    outline: none;
-}
-
-.down:hover {
-    background: #ccc;
-    cursor: pointer;
+    &:hover {
+        cursor: pointer;
+    }
 }
 
 .down {
@@ -289,6 +306,9 @@
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     background: #F7F7F7;
+    &:focus {
+        outline: none;
+    }
 }
 
 .gallery_vertical {
@@ -351,14 +371,13 @@
 }
 
 .gallery-horizontal__prev {
-    top: rem(-39px);
+    top: rem(-40px);
     right: rem(56px);
 }
 
 .gallery-horizontal__next {
     top: rem(-39px);
     right: rem(23px);
-    transform: rotate(-180deg);
 }
 
 /* ---- end -----*/
@@ -384,19 +403,27 @@
 }
 
 .gallery-multi__prev {
-    top: rem(7px);
-    right: rem(28px);
+    top: rem(5px);
+    right: rem(25px);
 }
 
 .gallery-multi__next {
-    top: rem(7px);
-    transform: rotate(-180deg);
-    right: rem(-5px);
+    top: rem(6px);
+    right: rem(-3px);
 }
 
 .gallery-multi__img {
     width: rem(14px);
     height: rem(14px);
+}
+
+.gallery-multi__img_next{
+    transform: rotate(-90deg);
+}
+
+
+.gallery-multi__img_prev{
+    transform: rotate(90deg);
 }
 
 .gallery-multi__item {
@@ -476,16 +503,19 @@
     }
     &__btn {
         position: absolute;
-        width: 8px;
-        height: 10px;
-        -webkit-transform: rotate(-90deg);
-        transform: rotate(-90deg);
-        top: 8px;
+        width: 10px;
+        height: 7px;
+        top: 5px;
         left: 36px;
         z-index: 99;
     }
     &__title {
         position: relative;
+    }
+
+    &__icon{
+        width: 14px;
+        height: 9px;
     }
 }
 
@@ -502,11 +532,11 @@
 }
 
 .favorite-devices__link {
-    font-family: 'ArialMT', Arial, Helvetica, sans-serif;
-    font-weight: normal;
+    font-family: 'Arial-BoldMT', Arial, Helvetica, sans-serif;
+    font-weight: 700;
     font-size: rem(13px);
     color: #000000;
-    background-color: #FFD93E;
+    background-color: rgba(247, 247, 247,1);
     border-radius: 20px;
     padding: rem(8px) rem(13px);
     position: relative;
@@ -518,13 +548,22 @@
     }
     &:hover {
         cursor: pointer;
-        background-color: #FFD700;
+        background-color: rgba(107, 107, 107, 0.2);
+
+    }
+    &:active {
+        cursor: pointer;
+        background-color:  rgba(107, 107, 107, 0.8);
+
     }
     &_paddingRight {
         @include phones {
             padding-right: 28px;
             border-radius: 20px;
         }
+    }
+    &_active{
+        background-color: #FFD700;
     }
 }
 
